Added data from database to chart